Fix ignored and completed imports not showing up

--- a/app/workspaces/detail/data/import/import.details.less
+++ b/app/workspaces/detail/data/import/import.details.less
@@ -16,8 +16,9 @@
     margin-top: 2px;
   }
   .ngViewport.ng-scope {
-    min-height: 200px !important;
-    height: 100% !important;
+    min-height: 90px !important;
+    max-height: 330px;
+    height: auto !important;
   }
   input[type="checkbox"] {
     margin: -7px 5px 0px 0px !important;
